# wagtail-redisearch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  manage.py  pyproject.toml  tox.ini
.github/workflows/: build.yaml  release.yaml
integration/example/: settings.py  urls.py
integration/home/: models.py  urls.py  views.py
integration/home/fixtures/: pages.json
integration/home/migrations/: 0001_initial.py  0002_auto_20220420_1706.py
integration/home/templates/home/: home.html  search_results.html
integration/tests/: test_wagtail_redisearch.py
tests/: test_wagtail_redisearch.py
wagtail_redisearch/: backend.py
