[tool.poetry]
authors = ["Tommaso Amici <me@tommasoamici.com>"]
license = "MIT"
name = "wagtail-redisearch"
description = "A Django app to use RediSearch as a search backend in Wagtail."
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
redis = "^4.0.0"
wagtail = "^2.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pycodestyle = "^2.8.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
